--- a/NetBeans/GoldenMart/nbproject/project.properties
+++ b/NetBeans/GoldenMart/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/GoldenMart
 endorsed.classpath=
 excludes=
 file.reference.hamcrest-core-1.3.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\hamcrest-core-1.3.jar
+file.reference.itextpdf-5.5.13-javadoc.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\itextpdf-5.5.13-javadoc.jar
 file.reference.junit-4.13.2.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\junit-4.13.2.jar
 file.reference.junit-jupiter-api-5.6.0.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\junit-jupiter-api-5.6.0.jar
 file.reference.junit-jupiter-engine-5.6.0.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\junit-jupiter-engine-5.6.0.jar
@@ -48,7 +49,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.junit-jupiter-api-5.6.0.jar}:\
     ${file.reference.junit-jupiter-engine-5.6.0.jar}:\
-    ${file.reference.junit-jupiter-params-5.6.0.jar}
+    ${file.reference.junit-jupiter-params-5.6.0.jar}:\
+    ${file.reference.itextpdf-5.5.13-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
