--- a/NetBeans/GoldenMart/nbproject/project.properties
+++ b/NetBeans/GoldenMart/nbproject/project.properties
@@ -35,6 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GoldenMart
 endorsed.classpath=
 excludes=
+file.reference.batik-rasterizer-1.17.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\batik-rasterizer-1.17.jar
+file.reference.batik-slideshow-1.17.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\batik-slideshow-1.17.jar
+file.reference.batik-squiggle-1.17.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\batik-squiggle-1.17.jar
+file.reference.batik-svgpp-1.17.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\batik-svgpp-1.17.jar
+file.reference.batik-ttf2svg-1.17.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\batik-ttf2svg-1.17.jar
+file.reference.fop-2.9.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\fop-2.9.jar
+file.reference.fop-core-2.9.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\fop-core-2.9.jar
+file.reference.fop-events-2.9.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\fop-events-2.9.jar
+file.reference.fop-util-2.9.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\fop-util-2.9.jar
 file.reference.hamcrest-core-1.3.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\hamcrest-core-1.3.jar
 file.reference.itextpdf-5.5.13-javadoc.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\itextpdf-5.5.13-javadoc.jar
 file.reference.junit-4.13.2.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\junit-4.13.2.jar
@@ -42,6 +51,7 @@ file.reference.junit-jupiter-api-5.6.0.jar=C:\\Users\\CARLOS\\Downloads\\netbean
 file.reference.junit-jupiter-engine-5.6.0.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\junit-jupiter-engine-5.6.0.jar
 file.reference.junit-jupiter-params-5.6.0.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\junit-jupiter-params-5.6.0.jar
 file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\CARLOS\\Documents\\Javs\\mysql-connector-j-8.3.0.jar
+file.reference.xmlgraphics-commons-2.7.jar=C:\\Users\\CARLOS\\Downloads\\netbeans\\platform\\modules\\ext\\xmlgraphics-commons-2.7.jar
 includes=**
 jar.compress=true
 javac.classpath=\
@@ -50,7 +60,17 @@ javac.classpath=\
     ${file.reference.junit-jupiter-api-5.6.0.jar}:\
     ${file.reference.junit-jupiter-engine-5.6.0.jar}:\
     ${file.reference.junit-jupiter-params-5.6.0.jar}:\
-    ${file.reference.itextpdf-5.5.13-javadoc.jar}
+    ${file.reference.itextpdf-5.5.13-javadoc.jar}:\
+    ${file.reference.fop-2.9.jar}:\
+    ${file.reference.fop-core-2.9.jar}:\
+    ${file.reference.fop-events-2.9.jar}:\
+    ${file.reference.fop-util-2.9.jar}:\
+    ${file.reference.batik-rasterizer-1.17.jar}:\
+    ${file.reference.batik-slideshow-1.17.jar}:\
+    ${file.reference.batik-squiggle-1.17.jar}:\
+    ${file.reference.batik-svgpp-1.17.jar}:\
+    ${file.reference.batik-ttf2svg-1.17.jar}:\
+    ${file.reference.xmlgraphics-commons-2.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
